# BmpImage

./: CMakeLists.txt  README.md  README_EN.md  color.h  constants.h  filter_control.h  filters.h  image.cpp  image.h  main.cpp  parser_com_str.h  parser_tests.cpp  write_file.cpp  write_file.h
filters/: filter_control.cpp  filters.cpp
input_output/: parser_com_str.cpp  read_file.h
picture/: color.cpp
tests/: 1  filters_tests.cpp  read_tests.cpp
utils/: read_file.cpp
